--- a/README
+++ b/README
@@ -10,7 +10,7 @@ The goal is simple: slide the numbered tiles on a grid to combine them and creat
 - Fully playable in browser
 - Responsive layout
 
-## 🕹️ How to Play
+##  How to Play
 - Use your **arrow keys** (↑ ↓ ← →) to move the tiles.  
 - When two tiles with the same number touch, they **merge into one**.  
 - Your goal is to reach **2048**.  
@@ -18,7 +18,7 @@ The goal is simple: slide the numbered tiles on a grid to combine them and creat
 
 ---
 
-## 🛠️ Tech Stack
+## Tech Stack
 - **HTML5** – structure  
 - **CSS3** – styling  
 - **JavaScript (ES6)** – game logic  
